src/test/ui/rfc-2008-non-exhaustive/stable-reachable.stderr
error: some variants are not matched explicitly
  --> $DIR/stable-reachable.rs:11:9
   |
LL |         _ => {}
   |         ^ pattern `Stable2` not covered
   |
note: the lint level is defined here
  --> $DIR/stable-reachable.rs:8:12
   |
LL |     #[deny(non_exhaustive_omitted_patterns)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: ensure that all variants are matched explicitly by adding the suggested match arms
   = note: the matched value is of type `Foo` and the `non_exhaustive_omitted_patterns` attribute was found

error: aborting due to previous error

